// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The header is rendered with the correct breadcrumb links  When a basepath is not passed through 1`] = `
<DocumentFragment>
  <div
    style="border: none none; border-radius: 0px; background-color: #000; margin-bottom: 0px; width: 100%;"
  >
    <nav
      style="display: flex; align-items: center; justify-content: space-between;"
    >
      <ol
        style="padding: 1rem; list-style: none; display: flex; align-items: center;"
      >
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/folder"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            folder
          </a>
        </li>
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/folder/nestedFolder"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            nestedFolder
          </a>
        </li>
      </ol>
      <form
        action="//search-results.html"
        method="GET"
        style="padding-right: 1rem; display: flex; gap: 0.5em;"
      >
        <input
          aria-description="Search term"
          id="search-term"
          name="term"
          style="font-size: inherit; font-family: inherit;"
          type="text"
        />
        <input
          style="font-size: inherit; font-family: inherit;"
          type="submit"
          value="Search"
        />
      </form>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`The header is rendered with the correct breadcrumb links  When a basepath is passed through 1`] = `
<DocumentFragment>
  <div
    style="border: none none; border-radius: 0px; background-color: #000; margin-bottom: 0px; width: 100%;"
  >
    <nav
      style="display: flex; align-items: center; justify-content: space-between;"
    >
      <ol
        style="padding: 1rem; list-style: none; display: flex; align-items: center;"
      >
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/morty-docs"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            morty-docs
          </a>
        </li>
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/morty-docs/some-repo"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            some-repo
          </a>
        </li>
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/morty-docs/some-repo/folder"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            folder
          </a>
        </li>
        <li>
          <span
            aria-hidden="true"
            style="margin: 0px 0.28rem; color: #ebebeb;"
          >
            /
          </span>
          <a
            href="/morty-docs/some-repo/folder/nestedFolder"
            style="text-align: left; color: lightblue; font-size: 1.5rem; text-decoration: none;"
          >
            nestedFolder
          </a>
        </li>
      </ol>
      <form
        action="/morty-docs/some-repo/search-results.html"
        method="GET"
        style="padding-right: 1rem; display: flex; gap: 0.5em;"
      >
        <input
          aria-description="Search term"
          id="search-term"
          name="term"
          style="font-size: inherit; font-family: inherit;"
          type="text"
        />
        <input
          style="font-size: inherit; font-family: inherit;"
          type="submit"
          value="Search"
        />
      </form>
    </nav>
  </div>
</DocumentFragment>
`;
